using jsandbox to execute code blocks

--- a/octoweb/index.html
+++ b/octoweb/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title> hello </title>
-
+	<link rel="jsandbox" href="js/libraries/eligrey-jsandbox-88dc252/src/jsandbox-worker.js" />
+	<script type="text/javascript" src="js/libraries/eligrey-jsandbox-88dc252/src/jsandbox.js"></script>
     <script src="js/libraries/jquery-1.11.1.js"></script>   
     <script src="js/libraries/jquery-ui.js"></script>  
     <!-- // <script src="js/libraries/dom.jsPlumb-1.6.2-min.js"></script>   -->
