added control elements and hw emulation element for slider, knob, and led

--- a/octoweb/index.html
+++ b/octoweb/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title> hello </title>
-    <!-- // <script src="js/libraries/dom.jsPlumb-1.6.2-min.js"></script>   -->
+<!--     // <script src="js/libraries/dom.jsPlumb-1.6.2-min.js"></script>   -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     <link rel="stylesheet" href="styles/css/clay.css">
 <!--     // <script src="js/clay.js"></script> -->
+<!-- 
     <script src="js/libraries/jquery-1.11.1.js"></script>  
+    <script src="js/libraries/jquery-ui.js"></script>  
+ -->
+    <script src="js/libraries/jquery.jsPlumb-1.6.2-min.js"></script>  
     <script src="js/libraries/midi.js"></script>
     <script src="js/libraries/emulatedHwEventHandlers.js"></script>  
-    <script src="js/libraries/jquery-ui.js"></script>  
-    <script src="js/libraries/jquery.jsPlumb-1.6.2-min.js"></script>  
+
     <style>
 
     
