--- a/octoweb/index.html
+++ b/octoweb/index.html
@@ -57,7 +57,10 @@
 	<!-- template to display button for emulated hardware devices -->
 	<script src="js/libraries/handlebars-v2.0.0.js"></script>
 	<script type="text/x-handlebars-template" id="emulated-hardware-button-template">
-		<li><a href="#" class="btn" id="hwEmuBtn{{this.name}}">{{this.name}} &#9744;</a></li>
+		<li>{{this.name}}<a href="#" class="btn" id="hwEmuBtn{{this.name}}">&#9744;</a></li>
+	</script>
+	<script type="text/x-handlebars-template" id="emulated-hardware-created-template">
+		<li>{{this.name}}<a href="#" class="btn" id="hwEmuCreated{{this.name}}">&#9746;</a></li>
 	</script>
 	<script src="js/libraries/handlebarsTemplates.js"></script>
 	
