fixed bug with deleting multiple instances of emulated hw

--- a/octoweb/index.html
+++ b/octoweb/index.html
@@ -60,7 +60,7 @@
 		<li>{{this.name}}<a href="#" class="btn" id="hwEmuBtn{{this.name}}">&#9744;</a></li>
 	</script>
 	<script type="text/x-handlebars-template" id="emulated-hardware-created-template">
-		<li>{{this.name}}<a href="#" class="btn" id="hwEmuCreated{{this.name}}">&#9746;</a></li>
+		<li>{{this.name}}<a href="#" class="btn" id="hwEmuCreated{{this.id}}">&#9746;</a></li>
 	</script>
 	<script src="js/libraries/handlebarsTemplates.js"></script>
 	
